--- a/mobs.html
+++ b/mobs.html
@@ -51,7 +51,7 @@
 		</div>
 	</div> 
 <div class="footer">
-	<p>Данный сайт был выполнен Громовом Алексеем с целью обучение.</p>
+	<p>Данный сайт был выполнен Громовом Алексеем с целью обучения.</p>
 </div>
 
 	
