--- a/bioms.html
+++ b/bioms.html
@@ -17,6 +17,62 @@
 		<div class="promo_text">Биомы</div>
 	</div>
 
+
+
+
+<div class="info">
+	<h2>Описание</h2>
+	<p>Lorem ipsum dolor, sit amet, consectetur adipisicing elit. Molestias facere, mollitia labore veritatis sequi repellat eaque consequatur ipsa! Voluptatem cupiditate consequuntur aperiam nostrum, ullam nisi dolore voluptates necessitatibus quos modi.
+	Dolorum accusamus unde fuga. Cum soluta deleniti asperiores voluptatum, dolor, ea ab facilis, minus omnis eveniet dolorum eligendi quas! Dolorem, exercitationem. Odit in dolor beatae numquam nam, cumque perferendis tenetur.</p>
+	<h2>Биомы верхнего мира</h2>
+		<div class="info_box">
+			<img src="swamp.jpg" alt="">
+			<div class="info_box_text">
+				<h3>Болота</h3>
+				<p>Болото представляет собой плоскую местность, затопленную водой до уровня моря. На поверхности болотная вода имеет серо-зелёный цвет, на глубине — бледно-жёлтый. Часто около воды генерируется сахарный тростник; на её поверхности — кувшинки; на дне — скопления глины и морской травы. На сухих и затопленных участках болота встречаются дубы, покрытые лианами. Кроме того, в болоте можно найти грибы, синие орхидеи, траву, а также ископаемые останки и хижины ведьм; в Bedrock Edition — огромные грибы.</p>
+				<p>В отличие от других биомов, значение температуры в болоте не зависит от высоты над уровнем моря — для его определения игра использует шум Перлина. Если температура в болоте будет ниже −0.1, то цвет растительности будет тёмно-зелёным, выше — оливковым. По умолчанию температура болота равна 0.8.</p>
+				<p>В болоте слизни появляются не только в слизневых чанках, но и в обычных на высоте 60—80 блоков, при уровне освещения 8 и ниже и в зависимости от фазы луны — чаще всего их можно найти в полнолуние и нельзя в новолуние. В болоте проще выживать, чем во многих других биомах, поскольку оно содержит много древесины и животных, с которых можно добыть пищу: кроме того, этот биом имеет плоский рельеф, упрощающий перемещение персонажа и строительство жилища. В расширенном мире болото не имеет существенных отличий от болота в обычном мире.</p>
+			</div>
+		</div>
+
+		<div class="info_box">
+			<img src="desert.png" alt="">
+			<div class="info_box_text">
+				<h3>Пустыня</h3>
+				<p>Пустыня (англ. Desert) — тёплый биом, состоящий из песка, на котором расположены кактусы и сухие кусты.</p>
+				<p>В пустыне почти нет растений — есть только кактусы и сухие кусты. В этом биоме в основном обитают только кролики; однако, если игрок нашёл деревню, то может встретить там жителей, кошек, коров, овец и свиней. Пустыня имеет в основном плоский рельеф, поверхность которого состоит из песка. Для того, чтобы песок не падал в пещеры, под ним генерируется песчаник. Здесь нет многих полезных ресурсов, которые можно было бы найти в других биомах, но зато в пустыне находится большое количество структур: деревень, храмов, ископаемых останков, колодцев и аванпостов разбойников. Деревни и храмы могут послужить временным жилищем и хорошим источником ценных предметов. Кроме рек, воду можно найти в деревнях и колодцах. Если раскопать ископаемые останки, то можно добыть много костных блоков и костной муки. Аванпосты разбойников — единственные источники древесины на поверхности пустыни.</p>
+				<p>Пустыни обычно находятся рядом с саванной, пустошью и тёплым океаном. Иногда они могут генерироваться около джунглей и равнин, редко — около холодных биомов. Невзирая на то, что в пустыне много структур, выживать здесь трудно из-за нехватки многих полезных ресурсов, вроде древесины. Тем не менее, палки можно добыть из сухих кустов. Ночью в этом биоме вместо зомби появляются кадавры — помимо урона, они наносят игроку эффект «Голод» и не горят при солнечном свете.</p>
+			</div>
+		</div>
+
+		<div class="info_box">
+			<img src="taiga.jpg" alt="">
+			<div class="info_box_text">
+				<h3>Тайга</h3>
+				<p>Тайга (англ. Taiga) — холодный биом, представляющий собой еловый лес. Тайга генерируется около любого холодного или умеренного биома.</p>
+				<p>Тайга представляет собой еловый лес. Помимо деревьев, в этом биоме можно найти грибы, траву, кусты сладких ягод, цветы, тыквы, озёра и такие опциональные структуры, как аванпосты разбойников и деревни. Поскольку значение температуры над уровнем моря снижается на 0.00167 (1⁄600) через каждый блок, на таёжных холмах на высоте 120 блоков и выше проходят снегопады и замерзает вода. Однако таёжные холмы очень редко достигают достаточной высоты, чтобы на их вершинах была низкая температура.</p>
+				<p>В тайге сложнее выживать, чем во многих других биомах: с одной стороны, она содержит много древесины и животных, с которых можно добыть пищу; с другой — множество холмов, усложняющих перемещение персонажа и строительство жилища. Кроме того, в тайге, как и в других лесах, деревья достаточно плотно расположены друг к другу, чтобы игрок смог заблудиться.</p>
+			</div>
+		</div>
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
 	
 		
 </body>
